Query language grammar developed

--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,8 @@
 
             <!-- ANTLR maven plugin -->
             <plugin>
-                <groupid>org.antlr</groupid>
-                <artifactid>antlr3-maven-plugin</artifactid>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr3-maven-plugin</artifactId>
                 <version>3.3</version>
                 <executions>
                     <execution>
@@ -165,6 +165,25 @@
                         <goals>
                             <goal>antlr</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${basedir}/target/generated-sources/antlr3</source>
+                            </sources>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
