--- a/pom.xml
+++ b/pom.xml
@@ -510,6 +510,12 @@
             <version>0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.tlrx</groupId>
+            <artifactId>elasticsearch-test</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
         <!-- ANTLR -->
         <dependency>
             <groupId>org.antlr</groupId>
