--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,38 @@ and open the template in the editor.
         <param-name>configuration</param-name>
         <param-value>development</param-value>
     </context-param>
+    
+    <login-config>
+        <auth-method>KEYCLOAK</auth-method>
+        <realm-name>demo</realm-name>
+    </login-config>
+    
+    <security-role>
+        <role-name>admin</role-name>
+    </security-role>
+    <security-role>
+        <role-name>user</role-name>
+    </security-role>
+    
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Users</web-resource-name>
+            <url-pattern>/login/*</url-pattern>
+            <url-pattern>/newProject/*</url-pattern>
+            <url-pattern>/newIssue/*</url-pattern>
+            <url-pattern>/newIssueType/*</url-pattern>
+            <url-pattern>/createStatus/*</url-pattern>
+            <url-pattern>/createWorkflow/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+    
+    <error-page>
+        <error-code>404</error-code>
+        <location>/home</location>
+    </error-page>
 
 </web-app>
 
