--- a/src/main/java/com/issuetracker/web/security/roles.properties
+++ b/src/main/java/com/issuetracker/web/security/roles.properties
@@ -1,8 +1,32 @@
-superuser=superuser
-public=public
-project.create=project-create
-project.delete=project-delete
-issue.type=issue-type
 status=status
 workflow=workflow
-issue.create=issue-create
+
+
+kc.public=Public
+kc.project.create=project-create
+kc.issue.create=issue-create
+kc.issue.type=issue-type
+
+it.project.create=Create Project
+it.project.browse=Browse Project
+it.project.versions=Edit Project Versions
+it.project.components=Edit Project Components
+it.project.custom.fields=Edit Project Custom Fields
+it.project.permissions=Edit Project Permissions
+it.project.permissions.issue=Edit Permissions of All Project's Issues
+it.project.delete=Delete Project
+it.project.rename=Rename Project
+
+it.issue.browse=Browse Issue
+it.issue.create=Create Issues
+it.issue.edit.description=Edit Issue Description
+it.issue.delete=Delete Issue
+it.issue.assign=Assign Issue
+it.issue.resolve=Resolve Issue
+it.issue.close=Close Issue
+
+it.comment.add=Add Comments
+it.comment.edit.all=Edit All Comments
+it.comment.edit.own=Edit Own Comments
+it.comment.delete.all=Delete All Comments
+it.comment.delete.own=Delete All Comments
