--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@
     </login-config>
     
     <security-role>
-        <role-name>user</role-name>
+        <role-name>SignedIn</role-name>
     </security-role>
     
     <security-constraint>
@@ -50,14 +50,9 @@
             <web-resource-name>Users</web-resource-name>
             <!--<url-pattern>/*</url-pattern>-->
             <url-pattern>/login/*</url-pattern>
-            <!--            <url-pattern>/newProject/*</url-pattern>
-            <url-pattern>/newIssue/*</url-pattern>
-            <url-pattern>/newIssueType/*</url-pattern>
-            <url-pattern>/createStatus/*</url-pattern>
-            <url-pattern>/createWorkflow/*</url-pattern>-->
         </web-resource-collection>
         <auth-constraint>
-            <role-name>user</role-name>
+            <role-name>SignedIn</role-name>
         </auth-constraint>
     </security-constraint>
     
