--- a/src/main/java/com/issuetracker/web/security/roles.properties
+++ b/src/main/java/com/issuetracker/web/security/roles.properties
@@ -25,6 +25,7 @@ it.issue.assign=Assign Issue
 it.issue.resolve=Resolve Issue
 it.issue.close=Close Issue
 
+it.comment.browse=Browse Comment
 it.comment.add=Add Comments
 it.comment.edit.all=Edit All Comments
 it.comment.edit.own=Edit Own Comments
