--- a/src/main/java/com/issuetracker/web/security/roles.properties
+++ b/src/main/java/com/issuetracker/web/security/roles.properties
@@ -1,13 +1,9 @@
-status=status
-workflow=workflow
-
-
-kc.public=Public
-kc.project.create=project-create
-kc.issue.create=issue-create
-kc.issue.type=issue-type
+it.status=Edit Statuses
+it.workflow=Edit Workflows
 
 it.project.create=Create Project
+issue.type=Edit Type Of Issues
+
 it.project.browse=Browse Project
 it.project.versions=Edit Project Versions
 it.project.components=Edit Project Components
@@ -16,6 +12,7 @@ it.project.permissions=Edit Project Permissions
 it.project.permissions.issue=Edit Permissions of All Project's Issues
 it.project.delete=Delete Project
 it.project.rename=Rename Project
+it.project.workflow=Edit Project's Workflow
 
 it.issue.browse=Browse Issue
 it.issue.create=Create Issues
