--- a/src/main/java/com/issuetracker/web/security/roles.properties
+++ b/src/main/java/com/issuetracker/web/security/roles.properties
@@ -1,8 +1,8 @@
 it.status=Edit Statuses
 it.workflow=Edit Workflows
-
+it.import=Import Issues
 it.project.create=Create Project
-issue.type=Edit Type Of Issues
+it.issue.type=Edit Type Of Issues
 
 it.project.browse=Browse Project
 it.project.versions=Edit Project Versions
@@ -28,3 +28,6 @@ it.comment.edit.all=Edit All Comments
 it.comment.edit.own=Edit Own Comments
 it.comment.delete.all=Delete All Comments
 it.comment.delete.own=Delete All Comments
+
+kc.admin=Admin
+kc.user=User
