--- a/src/main/java/com/issuetracker/web/security/roles.properties
+++ b/src/main/java/com/issuetracker/web/security/roles.properties
@@ -1,33 +1,39 @@
+#global
 it.status=Edit Statuses
-it.workflow=Edit Workflows
+it.workflow=Edit Workflow
 it.import=Import Issues
 it.project.create=Create Project
 it.issue.type=Edit Type Of Issues
+it.permissions=Edit default permissions
 
+#project
 it.project.browse=Browse Project
 it.project.versions=Edit Project Versions
 it.project.components=Edit Project Components
 it.project.custom.fields=Edit Project Custom Fields
 it.project.permissions=Edit Project Permissions
-it.project.permissions.issue=Edit Permissions of All Project's Issues
 it.project.delete=Delete Project
 it.project.rename=Rename Project
 it.project.workflow=Edit Project's Workflow
+it.project.create.issue=Create Issues
 
+#issue
 it.issue.browse=Browse Issue
-it.issue.create=Create Issues
 it.issue.edit.description=Edit Issue Description
 it.issue.delete=Delete Issue
 it.issue.assign=Assign Issue
 it.issue.resolve=Resolve Issue
 it.issue.close=Close Issue
+it.issue.comment.add=Add Comments
+it.issue.comment.edit.all=Edit All Comments
+it.issue.comment.edit.own=Edit Own Comments
+it.issue.comment.delete.all=Delete All Comments
+it.issue.comment.delete.own=Delete Own Comments
+it.issue.permission=Edit Issue Permission
 
+#comment
 it.comment.browse=Browse Comment
-it.comment.add=Add Comments
-it.comment.edit.all=Edit All Comments
-it.comment.edit.own=Edit Own Comments
-it.comment.delete.all=Delete All Comments
-it.comment.delete.own=Delete All Comments
 
+#keycloak
 kc.admin=Admin
 kc.user=User
